Adicionado acesso a banco de dados. Por enquanto apenas consulta na classe ClienteService.php

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "autoload": {
         "psr-4": {
             "Sisfin\\": "src/"
-        }
+        },
+        "files": ["src/include/config.php","src/include/connect.php"]
+
     },
     "authors": [
         {
