--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "autoload": {
         "psr-4": {
             "Sisfin\\": "src/"
-        }
+        },
+        "files": ["src/include/config.php"]
     },
     "authors": [
         {
