--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
             "name": "Prof. Matioli"
         }
     ],
-    "require": {}
+    "require": {
+        "components/jquery": "^3.2",
+        "twbs/bootstrap": "4.0.0"
+    }
 }
